[gd_scene load_steps=2 format=3 uid="uid://dh33kexposbnl"]

[ext_resource type="Script" path="res://addons/squiggles_core_autoloads/automated_setup_dialog.gd" id="1_ulivo"]

[node name="AutomatedSetupDialog" type="ConfirmationDialog"]
title = "SC4X Auto Setup"
initial_position = 4
size = Vector2i(909, 480)
visible = true
dialog_text = "This tool can help to automate setup of your SC4X installation"
dialog_close_on_escape = false
dialog_autowrap = true
script = ExtResource("1_ulivo")

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -49.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VFlowContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/h_separation = 16
theme_override_constants/v_separation = 16
alignment = 1

[node name="ProjectSettings" type="PanelContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HFlowContainer" type="HFlowContainer" parent="PanelContainer/MarginContainer/VBoxContainer/ProjectSettings"]
layout_mode = 2
theme_override_constants/h_separation = 16
theme_override_constants/v_separation = 16
alignment = 1

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/ProjectSettings/HFlowContainer"]
layout_mode = 2
text = "Project Settings Defaults"

[node name="BtnProjSetDefaultTheme" type="CheckButton" parent="PanelContainer/MarginContainer/VBoxContainer/ProjectSettings/HFlowContainer"]
layout_mode = 2
button_pressed = true
text = "Use SC4X Default Theme"

[node name="BtnProjSetDefaultMain" type="CheckButton" parent="PanelContainer/MarginContainer/VBoxContainer/ProjectSettings/HFlowContainer"]
layout_mode = 2
button_pressed = true
text = "Use SC4X Default Main Scene"

[node name="ConfigurationSettings" type="PanelContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HFlowContainer" type="HFlowContainer" parent="PanelContainer/MarginContainer/VBoxContainer/ConfigurationSettings"]
layout_mode = 2
theme_override_constants/h_separation = 16
theme_override_constants/v_separation = 16
alignment = 1

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/ConfigurationSettings/HFlowContainer"]
layout_mode = 2
text = "Configuration Files"

[node name="CheckCreateAppConfig" type="CheckButton" parent="PanelContainer/MarginContainer/VBoxContainer/ConfigurationSettings/HFlowContainer"]
layout_mode = 2
button_pressed = true
text = "Create 'appconfig.json' file"

[node name="CheckCreateSquigglesConfig" type="CheckButton" parent="PanelContainer/MarginContainer/VBoxContainer/ConfigurationSettings/HFlowContainer"]
layout_mode = 2
button_pressed = true
text = "Create 'squiggles_config.tres'"

[node name="DotNetDependencies" type="PanelContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HFlowContainer" type="HFlowContainer" parent="PanelContainer/MarginContainer/VBoxContainer/DotNetDependencies"]
layout_mode = 2
theme_override_constants/h_separation = 16
theme_override_constants/v_separation = 16
alignment = 1

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/DotNetDependencies/HFlowContainer"]
layout_mode = 2
text = "Add Dependencies to csproj"

[node name="CheckDepDiscord" type="CheckBox" parent="PanelContainer/MarginContainer/VBoxContainer/DotNetDependencies/HFlowContainer"]
layout_mode = 2
button_pressed = true
text = "DiscordRichPresence"

[node name="CheckDepGoDotTest" type="CheckBox" parent="PanelContainer/MarginContainer/VBoxContainer/DotNetDependencies/HFlowContainer"]
layout_mode = 2
text = "Chickensoft.GoDotTest"

[connection signal="canceled" from="." to="." method="_on_canceled"]
[connection signal="confirmed" from="." to="." method="_on_confirmed"]
